# Practice

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
tests/: test_main.py
